fixed add button spacing

--- a/public/css/friends.css
+++ b/public/css/friends.css
@@ -30,3 +30,7 @@ body {
     color: black;
     font-size: 1.75rem;
 }
+
+.fa-plus:before {
+    padding-right: 30px;
+}
