--- a/public/css/home.css
+++ b/public/css/home.css
@@ -37,3 +37,7 @@ body {
     color: black;
     font-size: 1.75rem;
 }
+
+.fa-plus:before {
+    padding-right: 30px;
+}
